--- a/root/templates/auth/login.tt
+++ b/root/templates/auth/login.tt
@@ -10,12 +10,12 @@
                 
                 <div class="form-group">
                     <label for="adminEmail">Email address</label>
-                    <input type="email" class="form-control" id="admin_email" placeholder="email@example.com" required>
+                    <input type="email" class="form-control" name="username" id="admin_email" placeholder="email@example.com" required>
                 </div>
                 
                 <div class="form-group">
                     <label for="adminPassword">Password</label>
-                    <input type="password" class="form-control" id="admin_password" placeholder="Password" required>
+                    <input type="password" class="form-control" name="password" id="admin_password" placeholder="Password" required>
                 </div>
                 
                 <div class="form-check">
