--- a/root/templates/category/category.tt
+++ b/root/templates/category/category.tt
@@ -6,13 +6,25 @@
 
     <div class="container">
         <div id="category_div"></div>
+        [% IF error == 2 %]
+            <div class="alert alert-danger alert-dismissible fade show" role="alert" > [% message %] 
+                <button type="button" className="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        [% ELSIF error == 1 %]
+            <div class="alert alert-success alert-dismissible fade show" role="alert"> [% message %] 
+                <button type="button" className="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        [% END %]
     </div>
 </div>
 
 <!-- Import React component scripts -->
 <script type="text/jsx" src="/static/js/admin/adminSidebarNavComponent.js"></script>
 <script type="text/jsx" src="/static/js/categoryComponent.js"></script>
-
 <!-- Only Valid for This Page -->
 <style type="text/css">
     #mainNav {
