--- a/root/templates/common/header.tt
+++ b/root/templates/common/header.tt
@@ -21,6 +21,18 @@
     <script>var exports = {"__esModule": true};</script>
 
     <link rel="stylesheet" href="/static/css/app.min.css"/>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155382750-1"></script>
+  <script>  
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-155382750-1');
+  </script>
+
+
   </head>
   
   <body>
