--- a/root/templates/blog/create_post.tt
+++ b/root/templates/blog/create_post.tt
@@ -1,4 +1,6 @@
 <br> <br>
+<!-- Include stylesheet -->
+<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 
 <div class="container">
     
@@ -7,6 +9,12 @@
         <div class="form-group">
             <label for="adminBlog">Title of the Blog</label>
             <input type="text" class="form-control" id="blog_title" name="title" placeholder="Blog Title" required>
+        </div>
+
+        <!-- Blog Image -->
+        <div class="custom-file">
+            <label class="custom-file-label" for="adminBlog">Upload Image <small> ( < 5 MB ) </small>  </label>
+            <input type="file" class="custom-file-input" id="customFile">    
         </div>
 
         <!-- Blog Category -->
@@ -27,9 +35,10 @@
         </div>
         <br>
         
-        <!-- Slug -->
+        <!-- Body -->
+        
          <div class="form-group">
-             <textarea class="editable" id="body" name="body"> </textarea>
+            <textarea class="editable" id="body" name="body"> </textarea>
         </div>
 
         <input type="submit" name="save_post" class="btn btn-primary" value="Save">
@@ -37,24 +46,19 @@
     </form>
 </div>
 
+
+
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 
-<link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.12/summernote-bs4.css" rel="stylesheet">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.12/summernote-bs4.js"></script>
+<link rel="stylesheet" href="https://unpkg.com/easymde/dist/easymde.min.css">
+<script src="https://unpkg.com/easymde/dist/easymde.min.js"></script>
 
 
+<!-- Initialize Quill editor -->
 <script>
-    $(document).ready(function () {
-        $('.editable').summernote({
-        placeholder: 'Enter Blog Text Here...',
-        name: 'body',
-        tabsize: 2,
-        height: 250,
-      });
-    });
-
+    var easyMDE = new EasyMDE({element: document.getElementById('body')});
 </script>
 
 <!-- Only Valid for This Page -->
@@ -68,5 +72,9 @@
 
     .ql-font-roboto {
         font-family: 'Roboto', sans-serif;
+    }
+
+    .custom-file {
+        margin: 1.3em auto; /* Margin top and bottom */
     }
 </style>
