--- a/root/templates/blog/create_post.tt
+++ b/root/templates/blog/create_post.tt
@@ -52,14 +52,21 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 
-<link rel="stylesheet" href="https://unpkg.com/easymde/dist/easymde.min.css">
-<script src="https://unpkg.com/easymde/dist/easymde.min.js"></script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.12/summernote-bs4.css" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.12/summernote-bs4.js"></script>
 
-
-<!-- Initialize Quill editor -->
 <script>
-    var easyMDE = new EasyMDE({element: document.getElementById('body')});
+    $(document).ready(function () {
+        $('.editable').summernote({
+        placeholder: 'Enter Blog Text Here...',
+        name: 'body',
+        tabsize: 2,
+        height: 250,
+      });
+    });
+
 </script>
+
 
 <!-- Only Valid for This Page -->
 <style type="text/css">
